crates/oxc_react_compiler/tests/snapshots/static-components__invalid-conditionally-assigned-dynamically-constructed-component-in-render.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/static-components/invalid-conditionally-assigned-dynamically-constructed-component-in-render.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] StaticComponents: Cannot create components during render", labels: [LabeledSpan { label: Some("This component is created during render"), span: Span { start: 221, end: 230 }, primary: false }, LabeledSpan { label: Some("The component is created during render here"), span: Span { start: 143, end: 160 }, primary: false }], help: Some("Components created during render will reset their state each time they are created. Declare components outside of render"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

// @loggerTestOnly @validateStaticComponents @outputMode:"lint"
function Example(props) {
	let Component;
	if (props.cond) {
		Component = createComponent();
	} else {
		Component = DefaultComponent;
	}
	return <Component />;
}
