crates/oxc_react_compiler/tests/snapshots/static-components__invalid-dynamically-constructed-component-arrow-destructured-param.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/static-components/invalid-dynamically-constructed-component-arrow-destructured-param.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "Cannot create components during render", labels: [LabeledSpan { label: Some("This component is created during render"), span: Span { start: 140, end: 149 }, primary: true }, LabeledSpan { label: Some("The component is created during render here"), span: Span { start: 105, end: 107 }, primary: false }], help: Some("Components created during render will reset their state each time they are created. Declare components outside of render"), note: Some("React Compiler skipped optimizing this component or hook"), severity: Error, code: OxcCode { scope: Some("react-compiler"), number: Some("StaticComponents") }, url: Some("https://react.dev/reference/eslint-plugin-react-hooks/lints/static-components") } }

// @loggerTestOnly @validateStaticComponents @outputMode:"lint"
function Example() {
	const Component = ({ x }) => <div>{x}</div>;
	return <Component x="value" />;
}
